--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,8 @@
 .App {
+  height: 100%;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
