upd: Change to handle svg drawing to react-simple-maps with topojson and d3-geo projections. Now map is zoomable and responsive

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,12 @@
-.App {
-  height: 100%;
-  display: flex !important;
+#root {
+  display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+}
+
+.map-wrapper {
+  border: 1px solid black;
+  overflow: hidden;
 }
 
 path:hover {
